# NSCC-Winter-2025-embedded-c-lab-4-KeanuRevan

./: CMakeLists.txt  main.c  startup.s  stm32.ld
